--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <link href="./public/favicon.ico" rel="icon" type="image/svg+xml"/>
+    <link href="/favicon.ico" rel="icon" type="image/svg+xml"/>
     <link
             href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
             rel="stylesheet"
